# pyQCD

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  benchmark.py  devel_requires.txt  fileio.py  generate_test_data.py  install-mpi.sh  install_requires.txt  interfaces.py  lattice.py  postprocess.py  rebuild_cython_code.py  requirements.txt  run.py  run_par.py  setup.py  setup.py.in  tune_u0.py
lib/: CMakeLists.txt  Makefile  Makefile_iridis  README.md  gil.cpp  interfaces.py  lattice.cpp  lattice.hpp  pyQCD.cpp  pylattice.cpp  pylattice.hpp  test.py  testSchwarz.py
lib/base/: array.hpp  array_expr.hpp  fermion.hpp  gauge_field.hpp  lattice.hpp  lattice_base.hpp  lattice_base_expr.hpp  layout.cpp  layout.hpp  site_gauge_field.hpp
lib/base/detail/: array_expr.hpp  array_traits.hpp  operators.hpp
lib/benchmarks/: bench_array.cpp  helpers.hpp
lib/include/: gil.hpp  lattice.hpp  pyQCD_utils.hpp  pylattice.hpp
lib/include/base/: array.hpp  array_expr.hpp  lattice_array.hpp  lattice_array_expr.hpp  lattice_base.hpp  lattice_base_expr.hpp  site_gauge_field.hpp
lib/include/utils/: macros.hpp  math.hpp  templates.hpp
lib/src/: gil.cpp  lattice.cpp  pyQCD.cpp  pyQCD_utils.cpp  pylattice.cpp  test.cpp
lib/tests/: helpers.hpp  matrix_compare.hpp  test_array.cpp  test_base.cpp  test_fermion.cpp  test_gauge_field.cpp  test_lattice.cpp  test_lattice_base.cpp  test_layout.cpp  test_matrix_array.cpp  test_site_gauge_field.cpp
lib/utils/: macros.hpp  math.cpp  templates.hpp
pyQCD/: CMakeLists.txt  SConstruct  __init__.py  globals.hpp  run.py
pyQCD/algorithms/: __init__.py  algorithms.cpp  algorithms.pxd  algorithms.pyx  conjugate_gradient.hpp  heatbath.cpp  heatbath.hpp  linear_algebra.hpp  solution_wrapper.hpp  types.hpp  update.hpp
pyQCD/analysis/: __init__.py  dataset.py  fitting.py  wilslps.py
pyQCD/benchmarks/: CMakeLists.txt  bench_array.cpp  bench_hopping_matrix.cpp  bench_lattice.cpp  bench_wilson_action.cpp  helpers.hpp
pyQCD/codegen/: __init__.py  generator.py
pyQCD/codegen/templates/: linop.cpp  linop.hpp
pyQCD/core/: CMakeLists.txt  SConscript  __init__.py  aligned_allocator.hpp  array.hpp  atomics.pxd  baretwopoint.py  colour_matrix.pxd  colour_matrix_array.pxd  colour_vector.pxd  comms.cpp  comms.hpp  comms.pxd  comms.py  complex.pxd  config.py  constants.hpp  constants.py  core.cpp  core.pxd  core.pyx  dataset.py  dicts.py  eigen.pxd  ensemble.py  fermion.pxd  fermion_field.pxd  gauge_field.pxd  headers.py  lattice.hpp  lattice.py  lattice_colour_matrix.pxd  lattice_colour_vector.pxd  lattice_expr.hpp  lattice_view.hpp  layout.cpp  layout.hpp  layout.pxd  log.py  matrix_array.hpp  (+11 more)
pyQCD/core/detail/: array_expr.hpp  array_traits.hpp  lattice_expr.hpp  lattice_traits.hpp  layout_helpers.cpp  layout_helpers.hpp  operators.hpp
pyQCD/core/include/: cuda_utils.h  lattice.hpp  pylattice.hpp  pyutils.hpp  random.hpp  utils.hpp
pyQCD/core/kernel/: CMakeLists.txt  README.md  __init__.py
pyQCD/core/src/: cuda_utils.cu  lattice_ctors.cpp  lattice_ferm_meas.cpp  lattice_glue_meas.cpp  lattice_update.cpp  lattice_utils.cpp  pylattice.cpp  pyutils.cpp  random.cpp  utils.cpp  wrapper.cpp
pyQCD/core/test/: test_lattice.cpp
pyQCD/examples/: basic.xml
pyQCD/fermions/: __init__.py  fermion_action.hpp  fermions.cpp  fermions.pxd  fermions.pyx  hopping_matrix.hpp  types.hpp  wilson_action.hpp
pyQCD/gauge/: __init__.py  gauge.cpp  gauge.pxd  gauge.pyx  gauge_action.hpp  plaquette.hpp  rectangle.hpp  rectangle_action.hpp  types.hpp  wilson_action.hpp
pyQCD/interfaces/: constants.py  defaults.xml  dicts.py  input.py  io.py  lattice.py  measurements.py  xmlinput.py
pyQCD/io/: __init__.py  converters.py  qcdutils.py
pyQCD/postprocessing/: constants.py  main.py  measurements.py  statistics.py  xmlroutines.py
pyQCD/templates/: edit_warning.txt  globals.hpp
pyQCD/templates/core/: allocation.pyx  arithmetic.pyx  array.pxd  atomics.pxd  broadcast_operators.hpp  buffer.pyx  complex.pxd  constants.hpp  core.pxd  core.pyx  core_macros.pyx  lattice.pxd  lattice.pyx  lattice_array.pxd  lattice_array_matrix.pxd  lattice_matrix.pxd  matrix.pxd  matrix.pyx  member_funcs.pyx  operators.pxd  qcd_types.hpp  setget.pyx  static_funcs.pyx  types.hpp
pyQCD/templates/gauge/: types.hpp
pyQCD/test/: test_pyQCD.py
pyQCD/test/data/: Dpsi_dwf_hamber-wu.npy  Dpsi_dwf_naik.npy  Dpsi_dwf_wilson.npy  Dpsi_hamber-wu.npy  Dpsi_naik.npy  Dpsi_wilson.npy  chroma_config.ildg  chroma_config.npy  config_heatbath_rs0.npy  config_heatbath_rs1.npy  config_metropolis_rs0.npy  config_metropolis_rs1.npy  config_rectangle_improved_heatbath_0.npy  config_rectangle_improved_heatbath_1.npy  config_rectangle_improved_heatbath_2.npy  config_rectangle_improved_metropolis_0.npy  config_rectangle_improved_metropolis_1.npy  config_rectangle_improved_staple_metropolis_0.npy  config_rectangle_improved_staple_metropolis_1.npy  config_rectangle_improved_staple_metropolis_2.npy  config_staple_metropolis_rs0.npy  config_staple_metropolis_rs1.npy  config_twisted_rectangle_improved_heatbath_2.npy  config_twisted_rectangle_improved_metropolis_1.npy  config_twisted_rectangle_improved_staple_metropolis_0.npy  config_wilson_heatbath_0.npy  config_wilson_heatbath_1.npy  config_wilson_heatbath_2.npy  config_wilson_metropolis_0.npy  (+83 more)
pyQCD/tests/: CMakeLists.txt  SConscript  helpers.hpp  matrix_compare.hpp  random.hpp  test_algorithms.py  test_array.cpp  test_conjugate_gradient.cpp  test_core.py  test_fermions.py  test_gamma_matrices.cpp  test_gauge.py  test_gauge_field.cpp  test_heatbath.cpp  test_hopping_matrix.cpp  test_lattice.cpp  test_lattice_base.cpp  test_layout.cpp  test_main.cpp  test_matrix_array.cpp  test_random.cpp  test_rectangle_action.cpp  test_rectangle_gauge_action.cpp  test_rectangle_heatbath_update.cpp  test_wilson_action.cpp  test_wilson_fermion_action.cpp  test_wilson_gauge_action.cpp  test_wilson_heatbath_update.cpp
pyQCD/utils/: CMakeLists.txt  codegen.py  macros.hpp  math.cpp  math.hpp  matrices.cpp  matrices.hpp  random.cpp  random.hpp  templates.hpp  utils.pxd
(+145 files in other folders)
